# RsaJni

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nexvoo/rsajni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MyRSA.cpp  com_nexvoo_rsajni_RsaJni.cpp  com_nexvoo_rsajni_RsaJni.h
app/src/main/java/com/nexvoo/rsajni/: MainActivity.java  RsaJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nexvoo/rsajni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
